# bera-proofs

./: .env.example  .gitignore  API_SPECIFICATION.md  CHANGES.md  Makefile  README.md  pyproject.toml  verify_header_roots.py  verify_onchain_roots.py
.claude/: settings.local.json
scripts/: Dockerfile  build.sh  docker-entrypoint.sh  push.sh  run.sh
src/: cli.py  main.py  main1.py  test_min.py  test_min2.py  test_min3.py  test_min4.py  test_min5.py  test_min6.py  test_min7.py  test_min8.py  uinttest.py  visualize_merkle.py
src/api/: __init__.py  beacon_client.py  endpoints.py  proof_service.py  rest_api.py
src/beacon_ssz/: config.py  containers.py  merkleize.py
src/bera_proofs/: cli.py  main.py
src/bera_proofs/api/: __init__.py  beacon_client.py  endpoints.py  proof_service.py  rest_api.py
src/bera_proofs/models/: __init__.py  api_models.py
src/bera_proofs/ssz/: constants.py  serialization.py
src/bera_proofs/ssz/containers/: base.py  utils.py
src/models/: __init__.py  api_models.py
src/ssz/: __init__.py  constants.py  encoding.py  serialization.py
src/ssz/containers/: __init__.py  base.py  beacon.py  utils.py
src/ssz/merkle/: __init__.py  core.py  encoding.py  proof.py  tree.py
src/ssz/utils/: __init__.py  hex_helpers.py
test/data/: header-8.json  proposer-proof2.json  state-8.json  state-bepolia-electra.json  state-bepolia-electra2.json  state-bepolia3.json  state-electra.json  state.json  state2.json
tests/: __init__.py  run_tests.py  simple_integration_test.py  test_integration.py  test_refactored_compatibility.py
(+6 files in other folders)
