[tool.poetry]
name = "bera-proofs"
version = "0.1.0"
description = "Berachain Merkle Proof Generator with Beacon API Integration"
authors = ["0xFrontRunner <nofront@infrared.finance>"]
readme = "README.md"
packages = [{include = "bera_proofs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
rich = "^14.0.0"
web3 = "^7.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
